--- a/notificatorlib/src/main/res/values/strings.xml
+++ b/notificatorlib/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="transition_test">transition</string>
+    <string name="new_message">New message</string>
 </resources>
