--- a/notificatorlib/src/main/res/values/strings.xml
+++ b/notificatorlib/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="new_message">New message</string>
+    <string name="camera">Camera</string>
+    <string name="photo_videos">Photo and Videos</string>
+    <string name="cancel">Cancel</string>
 </resources>
