--- a/notificatorlib/src/main/res/values/strings.xml
+++ b/notificatorlib/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="camera">Camera</string>
     <string name="photo_videos">Photo and Videos</string>
     <string name="cancel">Cancel</string>
+    <string name="not_supported">File not supported.</string>
 </resources>
