Add Voice Detection

--- a/notificatorlib/src/main/res/values/strings.xml
+++ b/notificatorlib/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="photo_videos">Photo and Videos</string>
     <string name="cancel">Cancel</string>
     <string name="not_supported">File not supported.</string>
+
+    <string name="speech_detected">Speech detected!</string>
+    <string name="noise_detected">Noise detected!</string>
+    <string name="press_button_to_start">Press button to start VAD!</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="sample_rate">Sample Rate:</string>
+    <string name="frame_size">Frame Size:</string>
+    <string name="mode">Mode:</string>
 </resources>
