--- a/notificatorlib/src/main/res/values-es/strings.xml
+++ b/notificatorlib/src/main/res/values-es/strings.xml
@@ -5,4 +5,12 @@
     <string name="photo_videos">Fotos y Videos</string>
     <string name="cancel">Cancelar</string>
     <string name="not_supported">Archivo no soportado</string>
+    <string name="speech_detected">Speech detected!</string>
+    <string name="noise_detected">Noise detected!</string>
+    <string name="press_button_to_start">Press button to start VAD!</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="sample_rate">Sample Rate:</string>
+    <string name="frame_size">Frame Size:</string>
+    <string name="mode">Mode:</string>
 </resources>
