--- a/notificatorlib/src/main/res/values-es/strings.xml
+++ b/notificatorlib/src/main/res/values-es/strings.xml
@@ -13,4 +13,5 @@
     <string name="sample_rate">Sample Rate:</string>
     <string name="frame_size">Frame Size:</string>
     <string name="mode">Mode:</string>
+    <string name="time_zero">00:00</string>
 </resources>
